// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should match snapshot 1`] = `
<div>
  <button
    class="css-1x0or6n-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when active 1`] = `
<div>
  <button
    class="css-vgvcgi-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when disabled 1`] = `
<div>
  <button
    class="css-1b75b7x-Button"
    disabled=""
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when full width 1`] = `
<div>
  <button
    class="css-wdf1tq-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when href prop is defined 1`] = `
<div>
  <a
    class="css-143r00j-Button"
    href="https://www.google.com.au"
  >
    <button
      class="css-gu4fde-Button"
      type="button"
    >
      <span>
        test
      </span>
    </button>
  </a>
</div>
`;

exports[`Button component should match snapshot when href prop is defined and isActive 1`] = `
<div>
  <a
    class="css-143r00j-Button"
    href="https://www.google.com.au"
  >
    <button
      class="css-1eaubgh-Button"
      type="button"
    >
      <span>
        test
      </span>
    </button>
  </a>
</div>
`;

exports[`Button component should match snapshot when icon is not string 1`] = `
<div>
  <button
    class="css-6uk6p-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when icon is provided 1`] = `
<div>
  <button
    class="css-6uk6p-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when icon is provided 2`] = `
<div>
  <button
    class="css-1sytz8c-Button"
    type="button"
  >
    <span
      class="css-1geq0g0"
    >
      <i
        class="material-icons  css-14lartn-Icon"
      >
        accessibility
      </i>
    </span>
    <span />
  </button>
</div>
`;

exports[`Button component should match snapshot when icon is provided and renderPosition left 1`] = `
<div>
  <button
    class="css-6uk6p-Button"
    type="button"
  >
    <span
      class="css-1gfetx6"
    >
      <i
        class="material-icons  css-18og482-Icon"
      >
        accessibility
      </i>
    </span>
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when icon is provided and renderPosition right 1`] = `
<div>
  <button
    class="css-6uk6p-Button"
    type="button"
  >
    <span>
      test
    </span>
    <span
      class="css-bq4wcj"
    >
      <i
        class="material-icons  css-18og482-Icon"
      >
        accessibility
      </i>
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when isCircle and size is sm 1`] = `
<div>
  <button
    class="css-1efvhu8-Button"
    type="button"
  >
    <span>
      CJ
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when isCircle is true 1`] = `
<div>
  <button
    class="css-1sytz8c-Button"
    type="button"
  >
    <span />
  </button>
</div>
`;

exports[`Button component should match snapshot when isIcon and size is large 1`] = `
<div>
  <button
    class="css-se9twx-Button"
    type="button"
  >
    <span />
  </button>
</div>
`;

exports[`Button component should match snapshot when loading 1`] = `
<div>
  <button
    class="css-1b75b7x-Button"
    disabled=""
    type="button"
  >
    <span />
    <span
      class="css-1geq0g0"
    >
      <svg
        class="css-ni82r0-Spinner"
        fill="none"
        height="48"
        role="img"
        stroke="currentcolor"
        stroke-width="4"
        viewBox="0 0 32 32"
        width="48"
      >
        <title>
          Loading...
        </title>
        <circle
          cx="16"
          cy="16"
          opacity="0.125"
          r="12"
        />
        <circle
          class="css-wpcq6n"
          cx="16"
          cy="16"
          r="12"
          stroke-dasharray="75.39822368615503"
          stroke-dashoffset="56.548667764616276"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when loading and showChildrenWhenLoading 1`] = `
<div>
  <button
    class="css-1b75b7x-Button"
    disabled=""
    type="button"
  >
    <span>
      test
    </span>
    <span
      class="css-bq4wcj"
    >
      <svg
        class="css-ni82r0-Spinner"
        fill="none"
        height="48"
        role="img"
        stroke="currentcolor"
        stroke-width="4"
        viewBox="0 0 32 32"
        width="48"
      >
        <title>
          Loading...
        </title>
        <circle
          cx="16"
          cy="16"
          opacity="0.125"
          r="12"
        />
        <circle
          class="css-wpcq6n"
          cx="16"
          cy="16"
          r="12"
          stroke-dasharray="75.39822368615503"
          stroke-dashoffset="56.548667764616276"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when openLinkInNewTab is true 1`] = `
<div>
  <a
    class="css-143r00j-Button"
    href="https://www.google.com.au"
    target="_blank"
  >
    <button
      class="css-gu4fde-Button"
      type="button"
    >
      <span>
        test
      </span>
    </button>
  </a>
</div>
`;

exports[`Button component should match snapshot when size is sm 1`] = `
<div>
  <button
    class="css-5cug14-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when variant is outline 1`] = `
<div>
  <button
    class="css-81jx7h-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when variant is secondary 1`] = `
<div>
  <button
    class="css-760c5g-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when variant is text 1`] = `
<div>
  <button
    class="css-760c5g-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;
